Replace toList() with .collect(Collectors.toList()) so that it does not generate errors with unmutable